# Wearable-Tech-Hub

./: CMakeLists.txt  LICENSE  README.md  btstack_config.h  build.ps1  lwipopts.h  tusb_config.h  uf2_gen.py  usb_descriptors.c
include/: ble_central.h  gpio_buttons.h  hid_merger.h  hid_parser.h  output_profiles.h  pairing_store.h  usb_output.h
src/: ble_central.c  gpio_buttons.c  hid_merger.c  hid_parser.c  main.c  output_profiles.c  pairing_store.c  usb_output.c
